--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "latest",
     "react-dom": "latest",
     "react-redux": "^7.2.4",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "latest",
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
