--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "latest",
     "@testing-library/react": "latest",
     "@testing-library/user-event": "latest",
+    "connected-react-router": "^6.9.1",
     "lodash": "^4.17.21",
     "maki": "^2.1.0",
     "mapbox-gl": "^2.3.1",
